--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
@@ -26,6 +27,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
