--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.7",
     "expo-font": "^11.10.3",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-native": "^0.73.5",
