Adicionado Loading nos cadastros -- adicionado cadastro de cliente - adicionado tela para cards com navegação

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
@@ -30,6 +31,7 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-mask-text": "^0.14.2",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
