--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react-hook-form": "^7.51.1",
     "react-native": "^0.73.5",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mask-text": "^0.14.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "yup": "^1.4.0"
